--- a/app/_styles/globalStyles.css
+++ b/app/_styles/globalStyles.css
@@ -23,6 +23,16 @@
     animation: rotate 1s infinite linear;
   }
 
+  /* Classes for hiding scrollbar */
+  .hide-scrollbar:state(webkit-scrollbar) {
+    display: none;
+  }
+
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
   @keyframes rotate {
     to {
       transform: rotate(1turn);
@@ -31,9 +41,10 @@
 }
 
 /* For data picker */
-.rdp {
-  --rdp-cell-size: 32px !important;
+.rdp-root {
+  --rdp-day-height: 32px !important;
+  --rdp-day-width: 32px !important;
   --rdp-accent-color: theme("colors.accent.500") !important;
-  --rdp-background-color: theme("colors.accent.600") !important;
+  --rdp-accent-background-color: theme("colors.accent.600") !important;
   margin: 0 !important;
 }
